--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,9 +11,9 @@
     <string name="text_forgot_password">Mot de passe oublier</string>
     <string name="text_already_account">Vous avez deja un compte?</string>
     <string name="text_send">Envoyer</string>
-    <string name="string_productCategory">Product Category</string>
-    <string name="string_productTitle">Product Title</string>
-    <string name="string_productPrice">Product Price</string>
+    <string name="string_productCategory">Categorie du Produit</string>
+    <string name="string_productTitle">Titre du Produit</string>
+    <string name="string_productPrice">Prix du Produit</string>
     <string name="string_productRate">4.9</string>
     <string name="string_sale_text">Sepette indirim</string>
     <string name="string_empty_bag">Sepetiniz boş</string>
@@ -22,22 +22,22 @@
     <string name="string_home">S-Course</string>
     <string name="button_buy">Satın al</string>
     <string name="string_tl">₺</string>
-    <string name="string_fav">Favoriler</string>
-    <string name="string_empty_fav">Favoriler boş</string>
-    <string name="string_back_button">Back Button</string>
+    <string name="string_fav">Favoris</string>
+    <string name="string_empty_fav">Aucun Favoris</string>
+    <string name="string_back_button">Bouton Retour</string>
     <string name="string_curve_image">Curve Image</string>
-    <string name="string_trash">Trash</string>
-    <string name="string_product_image">Product Image</string>
+    <string name="string_trash">Corbeille</string>
+    <string name="string_product_image">Image du Produit</string>
     <string name="string_toolbar_category">Kategoriler</string>
     <string name="string_toolbar_detail">Detay Sayfası</string>
     <string name="string_course_detail">Kurs Detayı</string>
-    <string name="string_add_bag">Sepete Ekle</string>
-    <string name="string_profile">Profil</string>
-    <string name="string_my_fav">Favorilerim</string>
-    <string name="string_my_bag">Siparişlerim</string>
-    <string name="string_hello">Merhaba,</string>
-    <string name="string_forward_button">forward button</string>
-    <string name="string_log_out">Çıkış yap</string>
+    <string name="string_add_bag">Ajouter au panier</string>
+    <string name="string_profile">Profile</string>
+    <string name="string_my_fav">Mes Favoris</string>
+    <string name="string_my_bag">Mon Panier</string>
+    <string name="string_hello">Brice,</string>
+    <string name="string_forward_button">Bouton Transferer</string>
+    <string name="string_log_out">Deconnexion</string>
     <string name="string_home_button">Home Button</string>
     <string name="string_reset_pas">Şifreni sıfırlaman için kayıtlı e-mail adresine yeni şifre göndereceğiz.</string>
     <string name="string_75">75%</string>
